--- a/07-MY451-means.Rmd
+++ b/07-MY451-means.Rmd
@@ -603,7 +603,7 @@ $\hat{\sigma}_{\hat{\Delta}}$ are shown in the “Mean Difference” and
 vice versa as in Table \@ref(tab:t-2testsY1), but this will make no
 difference to the conclusions from the test.
 
-![(\#fig:f-spss2test)SPSS output for a two-sample $t$-test in Example 7.2, comparing average weekly hours spent on housework between men and women.](spss2t){height="200mm"}
+![(\#fig:f-spss2test)SPSS output for a two-sample $t$-test in Example 7.2, comparing average weekly hours spent on housework between men and women.](spss2t){height="20cm"}
 
 \label{p-ztestass} In the two-sample situation with assumptions 1–4 at the beginning of Section \@ref(ss-means-inference-intro), the sampling distribution of the t-test
 statistic (\@ref(eq:ztestmuDb)) is approximately a standard normal
