--- a/05-MY451-probs.Rmd
+++ b/05-MY451-probs.Rmd
@@ -636,12 +636,11 @@ books.
   same numbers rearranged to show critical values for conventional
   significance levels for one- and two-sided tests.
 
-  ------------------------ ---------------------- ------ ------ -------
-  \                          Significance levels:     \      \       \
-  Alternative hypothesis                     0.10   0.05   0.01   0.001
-  Two-sided                                  1.65   1.96   2.58    3.29
-  One-sided                                  1.28   1.65   2.33    3.09
-  ------------------------ ---------------------- ------ ------ -------
+  ------------------------ --------------------------- ------ ------ -------
+  Alternative hypothesis      Significance levels 0.10   0.05   0.01   0.001
+  Two-sided                                       1.65   1.96   2.58    3.29
+  One-sided                                       1.28   1.65   2.33    3.09
+  ------------------------ --------------------------- ------ ------ -------
 
 The columns of the first part of Table \@ref(tab:t-ttable) are labelled
 “Right-hand tail probabilities”, with separate columns for some values
